--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,10 @@ pydantic
 python-dotenv
 google-genai
 python-multipart
-jose
+python-jose[cryptography]
 passlib
 bcrypt
 python-docx
 psycopg2-binary
 reportlab
+email-validator
